Version 1.1.1
[list]
[*]Added skylands generation to the nether in skylands world type. Ghast spawn rate has been significantly reduced in this world type given how difficult tunneling would be.
[*]Changed (increased) the number of surface water lakes in skylands given that there are no oceans.
[*]Changed (increased) the number of surface lava lakes in skylands given that cave lava does not generate, making obsidian easier to aqcuire.
[*]Changed (increased) the number of times the game will attempt to generate dungeons in skylands to offset the number of dungeon spawns that fail from being in the void.
[/list]

Version 1.1.0
[list]
[*]Added beta terrain gen world type. This world type uses BTA biomes but generates terrain based on old beta 1.7.3 terrain. Any seeds that worked in beta will work with this world type, although caves, ores, etc. will be different. This world type is also fully functional with with all vanilla features such as strongholds, villages, mineshafts, ravines, etc.
[*]Added skylands world type (modified from the old sky dimension generator from beta). I make no claims that this is in any way balanced, I simply added it as something fun and unique. It is currently incomplete as it does not generate villages, temples, witch huts, or strongholds as they interacted very poorly with the skyland terrain. I will be making further adjustments to this world type to enable these structures.
[*]Changed how deco worlds are created. Instead of selecting a separate world type at world creation, there is now a button to toggle whether deco is enabled. Internally these are still handled as separate world types (only server owners should need to care about that).